# rules_rivos

./: README.md  WORKSPACE
lib/: BUILD.bazel  deps.bzl  platform.bzl  repositories.bzl
toolchains/: BUILD.bazel  BUILD.riscv32_elf_toolchain.bazel  BUILD.riscv32_gnu_toolchain.bazel  BUILD.riscv64_elf_toolchain.bazel  BUILD.riscv64_gnu_toolchain.bazel
